plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.1'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '6.25.0'
	id 'jacoco'
	id 'info.solidsoft.pitest' version '1.19.0-rc.2'
	id "org.sonarqube" version "7.2.3.7755"
}

group = 'com.backend'
version = '0.0.1-SNAPSHOT'
description = 'A simple web app for co-op students.'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:mongodb:1.21.0'
	testImplementation 'org.testcontainers:junit-jupiter:1.21.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	testImplementation 'org.springframework.boot:spring-boot-starter-mail-test'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	implementation 'com.google.genai:google-genai:1.0.0'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}


spotless {
	java {
		googleJavaFormat()

		importOrder()
		removeUnusedImports()

		target 'src/**/*.java'
	}
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true // Codecov needs XML
		csv.required = false
		html.required = true
	}
}

pitest {
	junit5PluginVersion = '1.2.3'

	targetClasses = ['com.backend.coapp.service.*']
	excludedClasses = ['com.backend.coapp.service.genAI.*'] // decided these weren't worth the effort
	targetTests = [
			'com.backend.coapp.mutation.*',
			'com.backend.coapp.service.JwtServiceTest',]

	threads = 4
	timestampedReports = false
	outputFormats = ['XML', 'HTML']
	enableDefaultIncrementalAnalysis = true
	mutationThreshold = 99
	coverageThreshold = 0 // unsure if we need a cov threshold
	jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED', '-XX:+EnableDynamicAgentLoading']
}

sonar {
	properties {
		property "sonar.projectKey", "Co-App-Team_backend"
		property "sonar.organization", "co-app-team"
	}
}
